[package]
name = "index_clearance"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] } 
flexi_logger = "0.27.4"
log = "0.4.20"
chrono = "0.4.31"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
elasticsearch = "8.4.0-alpha.1"
getset = "0.1.2"
derive-new = "0.6.0"
futures = "0.3.30"
async-trait = "0.1.83"
rand = "0.8.5"
regex = "1.11.0"
lettre = { version = "0.11.10", default-features = false, features = ["smtp-transport", "tokio1", "builder", "tokio1-native-tls"] }
chrono-tz = "0.9.0"
cron = "0.12.1"
toml = "0.8.19"
once_cell = "1.20.2"